--- a/accound.html
+++ b/accound.html
@@ -37,7 +37,7 @@
             background-size: 100%;
             background-repeat: no-repeat;
             display: flex;
-            height: 1832px;
+            height: 280.98vh;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -47,42 +47,42 @@
         .userForm{
             border: 5px solid white;
             border-radius: 53px;
-            height: 1491px;
-            width: 994px;
+            height:  228.68vh;
+            width: 75.41vw;
             background-color: #1D1D1F;
             justify-content: center;
             align-items: flex-start;
-            margin-top: 172px;
+            margin-top: 26.38vh;
         }
 
         .welcome{
             display: flex;
-            width: 780px;
+            width: 59.18vw;
             align-items: center;
-            margin-top: 94px;
+            margin-top:  14.41vh;
             margin-left: auto;
             margin-right: auto;
         }
 
         .welcomeUser{
-            margin-left: 30px;
+            margin-left:  2.27vw;
             color: white;
             font-family: 'Roboto';
             font-style: normal;
             font-weight: 500;
-            font-size: 30px;
+            font-size:  2.27vw;
             line-height: 100%;
         }
 
         .userFormPic{
-            width: 221px;
+            width: 16.7vw;
         }
 
         .fieldset{
             margin-left: auto;
             margin-right: auto;
             display: flex;
-            margin-top: 41px;
+            margin-top: 6.28vh;
         }
         .fieldsetItems{
             display: block;
@@ -93,7 +93,7 @@
 
 
 .registration_template {
-  height: 960px;
+  height: 147.23vh;
 }
 
 .loginForm_welcome_text,
@@ -101,7 +101,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 1.51vw;
   color: #FFFFFF;
   text-align: center;
 }
@@ -118,8 +118,8 @@
 .LKcommentBlock {
   display: grid;
   justify-items: left;
-  margin-bottom: 13px;
-  width: 780px;
+  margin-bottom: 1.99vh;
+  width: 59.18vw;
 }
 
 .LKemail,
@@ -128,30 +128,30 @@
 .LKselectHero,
 .LKuserAvatar {
   border-radius: 24px;
-  width: 718px;
-  height: 92px;
+  width: 54.47vw;
+  height:  14.11vw;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 1.21vw;
+  line-height:  3.68vh;
   color: #1F2832;
-  padding-left: 50px;
+  padding-left: 3.79vw;
   border: 6px solid white;
   background-color: transparent;;
 }
 
 .LKuserComment {
   border-radius: 24px;
-  width: 718px;
-  height: 267px;
+  width: 54.47vw;
+  height: 40.95vh;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 1.21vw;
+  line-height:  3.68vh;
   color: #1F2832;
-  padding-left: 50px;
+  padding-left: 3.79vw;
   border: 6px solid white;
   background-color: transparent;;
 }
@@ -166,8 +166,8 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  font-size: 30px;
-  margin-bottom: 8px;
+  font-size: 2.27vw;
+  margin-bottom: 1.22vh;
 }
 
 .restorePass_Link {
@@ -183,7 +183,7 @@
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1.21vw;
   line-height: 100%;
   color: #FFFFFF;
 }
@@ -191,7 +191,7 @@
 .checkboxBlock {
   display: flex;
   grid-template-columns: 1fr 1fr;
-  width: 422px;
+  width:  32.01vw;
   justify-content: space-between;
   font-family: "Roboto";
 }
@@ -199,20 +199,20 @@
 .LKForm_Buttons {
   display: flex;
   justify-content: space-between;
-  width: 422px;
+  width: 32.01vw;
   font-family: "Roboto";
 }
 
 .closeButton,
 .signUpButton {
-  width: 177px;
-  height: 59px;
+  width:13.4vw;
+  height:  9.04vh;
   border-radius: 24px;
   padding: 0px;
-  margin-top: 41px;
+  margin-top:  6.28vh;
   color: #fff;
   font-family: "Roboto";
-  font-size: 26px;
+  font-size: 1.97vw;
 }
 
 .signUpButton {
@@ -228,11 +228,11 @@
 }
 
 .signUpButton_registration {
-  width: 422px;
-  height: 51px;
+  width:  32.01vw;
+  height: 7.82vh;
   border-radius: 8px;
   padding: 0px;
-  margin-top: 23px;
+  margin-top: 3.52vh;
   color: #fff;
   background-color: #DE9E15;
   border-style: solid;
