--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                     <li><a href="#comments" class="header__link">COMMENTS</a></li>
                 </ul>
             </nav>
+            <div class="header__avatar">
+                <img src="" alt="avatar">
+            </div>
             <div class="header__login">
                 <a href="#" id="signUp">SIGN UP</a>
             </div>
