скрывание кнопки регистрации

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><a href="#comments" class="header__link">COMMENTS</a></li>
                 </ul>
             </nav>
-            <div class="header__avatar">
+            <div class="header__avatar" id="avatar">
                 <img src="" alt="avatar">
             </div>
             <div class="header__login">
