изменила порядок блоков в комментах

--- a/index.html
+++ b/index.html
@@ -178,11 +178,14 @@
                             <button type="submit" class="comments__button button__shine button_fontsize" id="comment-add">Add comment</button>
                         </form>
                     </div>
-                    <div class="comments__result">
-                        <div class="comments__result-item" id="comment-field"></div>
+                    <div class="comments__result slider_container" id="block">
+                        <div class="comments__result-item slider-item" id="comment-field"></div>
                     </div>
                 </div>
             </div>
+            <button id="btnEnd">Click to end</button>
+            <button id="btnStart">Click to start</button>
+            <!-- кнопки прокрутки -->
         </article>
 
     </main>
@@ -214,11 +217,10 @@
     <script src="./assets/scripts/index.js"></script>
     <script src="./assets/scripts/search.js"></script>
     <script src="./assets/scripts/comments.js"></script>
+    <script src="./assets/scripts/commentsSlider.js"></script>
     <script src="./assets/scripts/slaiderSpells.js"></script>
     <script src="./assets/scripts/spells.js"></script>
     <script src="./assets/scripts/scroll.js"></script>
     <script src="./assets/scripts/registration.js"></script>
-
-
 
 </html>
