доделала форму js

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                 </ul>
             </nav>
             <div class="header__avatar" id="avatar">
-                <img src="" alt="avatar">
+                <img src="" id="img_avatar" alt="avatar">
             </div>
             <div class="header__login">
                 <a href="#" id="signUp">SIGN UP</a>
             </div>
         </div>
     </header>
-    <!--Main-->
+    <!--Registration-->
     <main class="main">
 
         <div class="registrationForm" id="registrationForm">
@@ -90,13 +90,14 @@
                 </form>
             </div>
         </div>
-
+        <!--MainPage-->
         <article class="mainpage" id="mainpage">
             <div class="mainpage__container">
                 <div class="mainpage__container__logodiv"><img class="mainpage__container__logo"
                         src="./assets/images/mainpage/logo.png" alt="логотип"></div>
-                <p class="mainpage__container__text1">Hello! You got into Harry Potter Wiki!</p>
-                <p class="mainpage__container__text2">Here you can find information about your favorite heroes and
+                <p class="mainpage__container__text1 text ">Hello! You got into Harry Potter Wiki!</p>
+                <p class="mainpage__container__text2 text">Here you can find information about your favorite
+                    heroes and
                     spells of the Harry Potter universe</p>
                 <div class="mainpage__container2">
                     <div class="mainpage__container__search">
@@ -105,7 +106,8 @@
                     <button class="mainpage__container__button button_fontsize button__shine"
                         id="searchButton">Search</button>
                 </div>
-                <p class="mainpage__container__text3">P.S Please enter the character's First and Last Name!</p>
+                <p class="mainpage__container__text3 text ">P.S Please enter the character's First and Last Name!
+                </p>
 
             </div>
         </article>
