привязка личного  к аватарке

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="./assets/scripts/modal.js"></script>
     <script src="./assets/scripts/modal2.js"></script>
     <script src="./assets/scripts/modalReg.js"></script>
+    <script src="./assets/scripts/modalLk.js"></script>
     <title>Document</title>
     <style>
 
@@ -246,5 +247,6 @@
     <script src="./assets/scripts/spells.js"></script>
     <script src="./assets/scripts/scroll.js"></script>
     <script src="./assets/scripts/registration.js"></script>
+    <script src="./assets/scripts/kabinet.js"></script>
 
 </html>
