--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                         <input type="email" id="userEmail" class="email form__item" required />
                     </div>
                     <div class="passwordBlock">
-                        <label for="userPassword" class="passwordLabel" minlength="6"
-                            pattern="^\d{1,}$">Password</label>
-                        <input type="password" id="userPassword1" class="password form__item" maxlength="7" required />
+                        <label for="userPassword" class="passwordLabel" pattern="^\d{1,}$">Password</label>
+                        <input type="password" id="userPassword1" class="password form__item" minlength="6"
+                            pattern="^\d{1,}$" required />
                     </div>
                     <div class="passwordBlock">
                         <label for="userPassword" class="passwordLabel">Repeat password</label>
