кнопки появляются после 5-го коммента

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </article>
 
         <!--Comments -->
-       <article class="comments" id="comments">
+        <article class="comments" id="comments">
             <div class="commentsBox">
                 <h2 class="title_size commentsBox__title">COMMENTS</h2>
                 <div class="comments__block">
@@ -188,11 +188,11 @@
                         </form>
                     </div>
                     <div class="comments__result" id="block">
-                        <div class="comments__result-item slick-vertical" id="comment-field"></div>
+                        <div class="comments__result-item" id="comment-field"></div>
                     </div>
                 </div>
-                <button class="comments__result-btn button__shine" id="btnEnd"><img src="./assets/images/mainpage/arrayBlueR.svg" alt="end"></button>
-                <button class="comments__result-btn button__shine" id="btnStart"><img src="./assets/images/mainpage/arrayBlueL.svg" alt="start"></button>
+                <button class="comments__result-btn" id="btnEnd"><img src="./assets/images/mainpage/arrayBlueL.svg" alt="end"></button>
+                <button class="comments__result-btn" id="btnStart"><img src="./assets/images/mainpage/arrayBlueL.svg" alt="start"></button>
             </div>
         </article>
 
