поправила верстку регистрации

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
         rel="stylesheet">
     <script src="./assets/scripts/modal.js"></script>
     <script src="./assets/scripts/modal2.js"></script>
-    <script src="./assets/scripts/modalReg.js"></script>
-    <script src="./assets/scripts/modalLk.js"></script>
     <title>Document</title>
     <style>
 
@@ -130,7 +128,7 @@
     
                 <div class="LKForm_Buttons">
                     <button type="submit" class="button__shine signUpButton">Save</button>
-                    <button class="button__shine closeButton">Close</button>
+                    <button class="button__shine closeButton" id="kabinet_close">Close</button>
                 </div>
     
             </div>
