--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
 
             <div class="fieldset">
                 <div class="fieldsetItems">
+                    <div class="LKloginBlock">
+                        <label for="LKuserLogin" class="LKloginLabel">Login</label>
+                        <input type="text" id="LKuserLogin" class="LKlogin form__item" required pattern="[a-zA-Z0-9]+$"
+                            minlength="5" />
+                    </div>
                 <div class="LKemailBlock">
                     <label for="LKuserEmail" class="LKemailLabel">Email</label>
                     <input type="email" id="LKuserEmail" class="LKemail" />
