с аватаркой все прекрасно

--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
 
             <div class="fieldset">
                 <div class="fieldsetItems">
+                    <div class="LKloginBlock">
+                        <label for="LKuserLogin" class="LKloginLabel">Login</label>
+                        <input type="text" id="LKuserLogin" class="LKlogin form__item" required pattern="[a-zA-Z0-9]+$"
+                            minlength="5" />
+                    </div>
                     <div class="LKemailBlock">
                         <label for="LKuserEmail" class="LKemailLabel">Email</label>
                         <input type="email" id="LKuserEmail" class="LKemail" />
@@ -125,9 +130,6 @@
                     </div>
 
                 </div>
-                <<<<<<< HEAD>>>>>>> e0d5a8a18ed253a767142c79da5ea8c0e3e02555
-                    =======
-                    >>>>>>> 202c78ad4714c90bc6ef9ad4cd9f2fbec5c00d92
             </div>
         </form>
         <!--MainPage-->
