добавила аватар в див

--- a/index.html
+++ b/index.html
@@ -228,11 +228,13 @@
                         </form>
                     </div>
                     <div class="comments__result" id="block">
-                        <div class="comments__result-item" id="comment-field"></div>
+                        <div class="comments__result-item" id="comment-field">
+
+                        </div>
                     </div>
                 </div>
-                <button class="comments__result-btn" id="btnEnd"><img src="./assets/images/mainpage/arrayBlueL.svg" alt="end"></button>
-                <button class="comments__result-btn" id="btnStart"><img src="./assets/images/mainpage/arrayBlueL.svg" alt="start"></button>
+                <button class="comments__result-btn" id="btnEnd"><img class="comments__result-img" src="./assets/images/mainpage/arrayBlueL.svg" alt="end"></button>
+                <button class="comments__result-btn" id="btnStart"><img class="comments__result-img" src="./assets/images/mainpage/arrayBlueL.svg" alt="start"></button>
             </div>
         </article>
     </main>
