--- a/index.html
+++ b/index.html
@@ -248,10 +248,8 @@
                         <div class="comments__result-item slick-vertical" id="comment-field"></div>
                     </div>
                 </div>
-                <button class="comments__result-btn button__shine" id="btnEnd"><img
-                        src="./assets/images/mainpage/arrayBlueR.svg" alt="end"></button>
-                <button class="comments__result-btn button__shine" id="btnStart"><img
-                        src="./assets/images/mainpage/arrayBlueL.svg" alt="start"></button>
+                <button class="comments__result-btn " id="btnEnd"></button>
+                <button class="comments__result-btn " id="btnStart"></button>
             </div>
         </article>
     </main>
