--- a/index.html
+++ b/index.html
@@ -252,11 +252,11 @@
                         </div>
                     </div>
                 </div>
-
-                <button class="comments__result-btn " id="btnEnd"></button>
-                <button class="comments__result-btn " id="btnStart"></button>
-
-            </div>
+                <div class="btnFlex">
+                    < <button class="comments__result-btn " id="btnEnd"></button>
+                        <button class="comments__result-btn " id="btnStart"></button>
+                        /div>
+                </div>
         </article>
     </main>
     <!--Footer -->
