--- a/index.html
+++ b/index.html
@@ -253,10 +253,10 @@
                     </div>
                 </div>
                 <div class="btnFlex">
-                    < <button class="comments__result-btn " id="btnEnd"></button>
-                        <button class="comments__result-btn " id="btnStart"></button>
-                        /div>
+                    <button class="comments__result-btn " id="btnEnd"></button>
+                    <button class="comments__result-btn " id="btnStart"></button>
                 </div>
+            </div>
         </article>
     </main>
     <!--Footer -->
