--- a/index.html
+++ b/index.html
@@ -91,10 +91,11 @@
                 </form>
             </div>
         </div>
+        <!--Kabinet-->
         <form class="userForm" id="userForm">
             <div class="welcome">
                 <img class="userFormPic" src="./assets/images/account/Ellipse.png">
-                <p class="welcomeUser">Hi, Katechka</p>
+                <p class="welcomeUser"></p>
             </div>
 
             <div class="fieldset">
@@ -128,7 +129,7 @@
 
                     <div class="LKForm_Buttons">
                         <button type="submit" class="button__shine signUpButton">Save</button>
-                        <button class="button__shine closeButton">Close</button>
+                        <button class="button__shine closeButton" id="kabinet_close">Close</button>
                     </div>
 
                 </div>
