доделала личный кабинет,пофиксила баги на всем приложении

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         <!--Kabinet-->
         <form class="userForm" id="userForm">
             <div class="welcome">
-                <img class="userFormPic" src="./assets/images/account/Ellipse.png">
-                <p class="welcomeUser"></p>
+                <img class="userFormPic" id="userFormPic">
+                <p id="welcomeUser"></p>
             </div>
 
             <div class="fieldset">
@@ -128,7 +128,7 @@
                     </div>
 
                     <div class="LKForm_Buttons">
-                        <button type="submit" class="button__shine signUpButton">Save</button>
+                        <button type="submit" class="button__shine signUpButton" id="kabinet_save">Save</button>
                         <button class="button__shine closeButton" id="kabinet_close">Close</button>
                     </div>
 
@@ -293,6 +293,6 @@
     <script src="./assets/scripts/spells.js"></script>
     <script src="./assets/scripts/scroll.js"></script>
     <script src="./assets/scripts/registration.js"></script>
-    <script src="./assets/scripts/kabinet.js"></script>
+
 
 </html>
