--- a/index.html
+++ b/index.html
@@ -247,12 +247,27 @@
                                 id="comment-add">Add comment</button>
                         </form>
                     </div>
-
-
                     <div class="comments__result" id="block">
-
+                        <div class="comments__result-block">
+                            <img src="./assets/images/mainpage/icon7.svg" alt="avatar" id="user-avatar">
+                            <p class="comments__name">Tanya</p>
+                            <p class="comments__content">Thx for the info about my fav heroes!</p>
+                            <p class="comments__time">10 Jan 2023</p>
+                        </div>
+                        <div class="comments__result-block">
+                            <img src="./assets/images/mainpage/user.png" alt="avatar" id="user-avatar">
+                            <p class="comments__name">Diana</p>
+                            <p class="comments__content">Totally in love with Harry!</p>
+                            <p class="comments__time">15 Jan 2023</p>
+                        </div>
+                        <div class="comments__result-block">
+                            <img src="https://cdn-icons-png.flaticon.com/512/195/195138.png" alt="avatar"
+                                id="user-avatar">
+                            <p class="comments__name">Sasha</p>
+                            <p class="comments__content">Wow! Spells! </p>
+                            <p class="comments__time">20 Jan 2023</p>
+                        </div>
                         <div class="comments__result-item" id="comment-field"></div>
-
                     </div>
                 </div>
                 <div class="btnFlex">
